--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
+            <version>10.1.4</version>
         </dependency>
         <dependency>
             <groupId>jakarta.servlet</groupId>
