--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.mvc.format.date=yyyy-MM-dd
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/todos
-spring.datasource.username=todos-user
-spring.datasource.password=dummytodos
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_app
+spring.datasource.username=root
+spring.datasource.password=root_pwd
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 #todos-user@localhost:3306
